# irvine-01-sw

./: .gitignore  CMakeLists.txt  Makefile  README.md
adcs-sensors/: .adcs-sensors-util.c.swp  CMakeLists.txt  adcs-sensors-telemetry.cfg  adcs-sensors-util.c  adcs-sensors.c  adcs-sensors.cmd.cfg
auth/: access.enc  cubesat-admin.cert  irv-02-access.enc  irvine-01.enc  satcomm.enc
beacon/: BeaconStatus.cpp  BeaconStatus.h  CMakeLists.txt  beacon.c  beacon.cmd.cfg  beacon.cpp  beacon.h  beaconDecoder.cpp  beaconSim.cpp
beacon/test/: BeaconDecoderTest.cpp  CMakeLists.txt  beacon.hex  beacon2.hex
ccardctl/: CCardCmd.cpp  CCardCmdCodec.cpp  CCardCmdCodec.h  CCardCtl.cpp  CCardI2CPortState.cpp  CCardI2CPortState.h  CCardI2CX.cpp  CCardI2CX.h  CCardMgr.h  CCardMsgCodec.cpp  CCardMsgCodec.h  CMakeLists.txt  DsaController.h  DsaI2CPortState.cpp  DsaI2CPortState.h  DsaOp.cpp  DsaOp.h  DsaOpContext.h  InitialDeployOp.cpp  InitialDeployOp.h  InitialDeployer.h  InitialDsaDeployOp.cpp  InitialDsaDeployOp.h  OpContext.h  cCardMessages.h  ccardDefs.h  ccardTelemetry.cfg  ccardctl.cmd.cfg  ccardctl.cpp  dsaStatus-telemetry.cfg  dsaStatus-telemetry.sh  powerMonTelemetry.cfg
ccardctl/test/: CCardCmdCodecTest.cpp  CCardI2CPortStateTest.cpp  CCardMsgCodecTest.cpp  CMakeLists.txt  DsaI2CPortStateTest.cpp  InitialDeployOpTest.cpp
cmake/: arm-linux.cmake  arm-linux.cmake.orig  nativeCompile.cmake
cmake/Modules/: gmock.cmake
cmdd/: CMakeLists.txt  cmdExec.cpp  cmdMessages.h  cmdd.cmd.cfg  cmdd.cpp
cmds/: CMakeLists.txt  cmdChmod  cmdCksum  cmdCp  cmdLslah  cmdMkdir  cmdMtCtl  cmdPowerMon  cmdPwrSens  cmdRm  cmdSnap  cmdTest  cmdTestErr.sh  cmdUvccapture  log.sh
datalogger/: telemetry.cfg
doc/: EDUCableConnections.graphml  GPSHeaderConnections.graphml  IrvineCubeSatDevelopmentNetworkTopoloy.graphml  IrvineCubeSatGitProjects.graphml  RemoteCmdFramework.org  SystemArchitecture.graphml  SystemStates.graphml  irvine-01_tasks.org  releaseNotes.org  snapRequirements.org
doc/output/: EDUCableConnections.html  GPSHeaderConnections.html  IrvineCubeSatDevelopmentNetworkTopoloy.html  IrvineCubeSatGitProjects.html  SystemArchitecture.html  SystemStates.html
dsa/: CMakeLists.txt  dsa_deployer.sh  gpio.sh
dsa/scripts/: deploy.sh  gpio.sh  release.sh
flightscripts/: CMakeLists.txt  deploy.sh  restartSatcomm.sh  solve-field.sh
flightscripts/alerter/: warningAlerter.h
gpiocpp/: CMakeLists.txt  Gpio.cpp  Gpio.h  gpioUtil.cpp
gpiocpp/test/: CMakeLists.txt  GpioTest.cpp
navigation/: CMakeLists.txt  sensorInterface.sh  sensorManager  sensorManager.cpp
satcomm/: CMakeLists.txt  groundstation.readme  groundstationTest.cfg  irvine-gs.cfg  satcomm.cfg  satcomm.cfg.in
scripts/: arsftp.sh  beaconMonitor.sh  clockSync.sh  cubeSatNetSetupRequest.sh  mketags.sh  monitor.sh  opensslKeyTool.sh  pingMon.sh  toolchainSetup.sh  vpnConnect.sh
spidev-test/: CMakeLists.txt  spidev-test.c
telemetry/: CMakeLists.txt  telemetry.cfg
thread/: CMakeLists.txt  Mutex.h  MutexLock.h  Thread.cpp  Thread.h
thread/test/: CMakeLists.txt  MutexTest.cpp  ThreadTest.cpp
utilities/: CMakeLists.txt  MagCtl.cpp  ThrusterThrottle.cpp
version/: CMakeLists.txt  issue.in
