CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12.2)

PROJECT(irvine-01)

option(WITH_BUILDROOT "with(out) buildroot compile" OFF)
if (WITH_BUILDROOT)
else (WITH_BUILDROOT)
  SET(NOT_BUILDROOT_COMPILE ON)
endif(WITH_BUILDROOT)

SET(MAKE_INCLUDE_CURRENT_DIR ON)

ADD_SUBDIRECTORY(beacon)
ADD_SUBDIRECTORY(satcomm)
ADD_SUBDIRECTORY(version)
